k8s/altair/apps/tdarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tdarr
  namespace: tdarr
spec:
  selector:
    app: tdarr
  ports:
    - port: 80
      targetPort: 8265
