k8s/altair/apps/tdarr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tdarr
  namespace: tdarr
spec:
  entryPoints: [websecure]
  routes:
    - kind: Rule
      match: Host(`tdarr.greedo.net`)
      middlewares:
        - name: downloads-oidc-auth
          namespace: kube-system
      services:
        - name: tdarr
          port: 80
  tls: {}
