k8s/altair/apps/tdarr/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tdarr
  namespace: tdarr
spec:
  endpointSelector:
    matchLabels:
      app: tdarr
  ingress:
    # web UI: Traefik + glance monitor widget
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: glance
      toPorts:
        - ports:
            - port: "8265"
              protocol: TCP
